# simple-queue-dashboard

./: .dockerignore  Makefile  README.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: release.yml
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/router/: index.ts
src/stores/: sqsStore.ts
src/views/: Home.vue  Messages.vue  Queues.vue
