[package]
name = "SQS-Dashboard"
version = "0.1.0"
description = "Simple Queue Dashboard"
authors = ["miguelms_Es"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sqs_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "1.8.12"
aws-sdk-sqs = "1.92.0"
aws-credential-types = "1.2.1"
tokio = { version = "1.49.0", features = ["full"] }

